Bug 483487 - Kate crash clicking on "empty" horizontal scroll bar line
Summary: Kate crash clicking on "empty" horizontal scroll bar line
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: QStyle (other bugs)
Version First Reported In: master
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6
: 483892 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-03-13 21:45 UTC by Stefano
Modified: 2024-03-18 11:51 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Kate crash (353.68 KB, video/vnd.avi)
2024-03-14 18:15 UTC, Stefano
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stefano 2024-03-13 21:45:30 UTC
SUMMARY
By clicking on the gray line of the horizontal scroll bar, Kate crashes without saving any open files.

STEPS TO REPRODUCE
1. Open Kate
2. Click on the horizontal scroll bar place

OBSERVED RESULT
App crash

EXPECTED RESULT
Nothing has to happen

SOFTWARE/OS VERSIONS
Linux: Arch Linux x86_64 - 6.7.9-arch1-1
KDE Plasma Version: 6.0.1
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Comment 1 Waqar Ahmed 2024-03-13 22:32:51 UTC
Can you provide a back trace or a video recording?
Comment 2 Stefano 2024-03-14 18:15:54 UTC
Created attachment 167198 [details]
Kate crash
Comment 3 Stefano 2024-03-14 18:16:36 UTC
I'm sorry but I'm not familiar with backtrace, I add a video and the journalctl output:

mar 14 19:05:20 dell systemd-coredump[6091]: [🡕] Process 6067 (kate) of user 1000 dumped core.

Stack trace of thread 6067:
#0  0x000072654f78b005 _ZNK7QObject8propertyEPKc (libQt6Core.so.6 + 0x18b005)
#1  0x00007265436461a0 n/a (breeze6.so + 0x3f1a0)
#2  0x0000726543651c7a n/a (breeze6.so + 0x4ac7a)
#3  0x000072654f737d18 _ZN23QCoreApplicationPrivate34sendThroughApplicationEventFiltersEP7QObjectP6QEvent (libQt6Core.so.6 + 0x137d18)
#4  0x00007265508f4462 _ZN19QApplicationPrivate13notify_helperEP7QObjectP6QEvent (libQt6Widgets.so.6 + 0xf4462)
#5  0x00007265508f6a40 _ZN12QApplication6notifyEP7QObjectP6QEvent (libQt6Widgets.so.6 + 0xf6a40)
#6  0x000072654f739818 _ZN16QCoreApplication15notifyInternal2EP7QObjectP6QEvent (libQt6Core.so.6 + 0x139818)
#7  0x0000726543651ee2 n/a (breeze6.so + 0x4aee2)
#8  0x000072654f737d18 _ZN23QCoreApplicationPrivate34sendThroughApplicationEventFiltersEP7QObjectP6QEvent (libQt6Core.so.6 + 0x137d18)
#9  0x00007265508f4462 _ZN19QApplicationPrivate13notify_helperEP7QObjectP6QEvent (libQt6Widgets.so.6 + 0xf4462)
#10 0x00007265508f6a40 _ZN12QApplication6notifyEP7QObjectP6QEvent (libQt6Widgets.so.6 + 0xf6a40)
#11 0x000072654f739818 _ZN16QCoreApplication15notifyInternal2EP7QObjectP6QEvent (libQt6Core.so.6 + 0x139818)
#12 0x0000726543651ee2 n/a (breeze6.so + 0x4aee2)
#13 0x000072654f737d18 _ZN23QCoreApplicationPrivate34sendThroughApplicationEventFiltersEP7QObjectP6QEvent (libQt6Core.so.6 + 0x137d18)
#14 0x00007265508f4462 _ZN19QApplicationPrivate13notify_helperEP7QObjectP6QEvent (libQt6Widgets.so.6 + 0xf4462)
#15 0x00007265508f6a40 _ZN12QApplication6notifyEP7QObjectP6QEvent (libQt6Widgets.so.6 + 0xf6a40)
#16 0x000072654f739818 _ZN16QCoreApplication15notifyInternal2EP7QObjectP6QEvent (libQt6Core.so.6 + 0x139818)
#17 0x0000726543651ee2 n/a (breeze6.so + 0x4aee2)
#18 0x000072654f737d18 _ZN23QCoreApplicationPrivate34sendThroughApplicationEventFiltersEP7QObjectP6QEvent (libQt6Core.so.6 + 0x137d18)
#19 0x00007265508f4462 _ZN19QApplicationPrivate13notify_helperEP7QObjectP6QEvent (libQt6Widgets.so.6 + 0xf4462)
#20 0x00007265508f6a40 _ZN12QApplication6notifyEP7QObjectP6QEvent (libQt6Widgets.so.6 + 0xf6a40)
#21 0x000072654f739818 _ZN16QCoreApplication15notifyInternal2EP7QObjectP6QEvent (libQt6Core.so.6 + 0x139818)
#22 0x0000726543651ee2 n/a (breeze6.so + 0x4aee2)
#23 0x000072654f737d18 _ZN23QCoreApplicationPrivate34sendThroughApplicationEventFiltersEP7QObjectP6QEvent (libQt6Core.so.6 + 0x137d18)
#24 0x00007265508f4462 _ZN19QApplicationPrivate13notify_helperEP7QObjectP6QEvent (libQt6Widgets.so.6 + 0xf4462)
#25 0x00007265508f6a40 _ZN12QApplication6notifyEP7QObjectP6QEvent (libQt6Widgets.so.6 + 0xf6a40)
#26 0x000072654f739818 _ZN16QCoreApplication15notifyInternal2EP7QObjectP6QEvent (libQt6Core.so.6 + 0x139818)
#27 0x0000726543651ee2 n/a (breeze6.so + 0x4aee2)
#28 0x000072654f737d18 _ZN23QCoreApplicationPrivate34sendThroughApplicationEventFiltersEP7QObjectP6QEvent (libQt6Core.so.6 + 0x137d18)
#29 0x00007265508f4462 _ZN19QApplicationPrivate13notify_helperEP7QObjectP6QEvent (libQt6Widgets.so.6 + 0xf4462)
#30 0x00007265508f6a40 _ZN12QApplication6notifyEP7QObjectP6QEvent (libQt6Widgets.so.6 + 0xf6a40)
#31 0x000072654f739818 _ZN16QCoreApplication15notifyInternal2EP7QObjectP6QEvent (libQt6Core.so.6 + 0x139818)
#32 0x0000726543651ee2 n/a (breeze6.so + 0x4aee2)
#33 0x000072654f737d18 _ZN23QCoreApplicationPrivate34sendThroughApplicationEventFiltersEP7QObjectP6QEvent (libQt6Core.so.6 + 0x137d18)
#34 0x00007265508f4462 _ZN19QApplicationPrivate13notify_helperEP7QObjectP6QEvent (libQt6Widgets.so.6 + 0xf4462)
#35 0x00007265508f6a40 _ZN12QApplication6notifyEP7QObjectP6QEvent (libQt6Widgets.so.6 + 0xf6a40)
#36 0x000072654f739818 _ZN16QCoreApplication15notifyInternal2EP7QObjectP6QEvent (libQt6Core.so.6 + 0x139818)
#37 0x0000726543651ee2 n/a (breeze6.so + 0x4aee2)
#38 0x000072654f737d18 _ZN23QCoreApplicationPrivate34sendThroughApplicationEventFiltersEP7QObjectP6QEvent (libQt6Core.so.6 + 0x137d18)
#39 0x00007265508f4462 _ZN19QApplicationPrivate13notify_helperEP7QObjectP6QEvent (libQt6Widgets.so.6 + 0xf4462)
#40 0x00007265508f6a40 _ZN12QApplication6notifyEP7QObjectP6QEvent (libQt6Widgets.so.6 + 0xf6a40)
#41 0x000072654f739818 _ZN16QCoreApplication15notifyInternal2EP7QObjectP6QEvent (libQt6Core.so.6 + 0x139818)
#42 0x0000726543651ee2 n/a (breeze6.so + 0x4aee2)
#43 0x000072654f737d18 _ZN23QCoreApplicationPrivate34sendThroughApplicationEventFiltersEP7QObjectP6QEvent (libQt6Core.so.6 + 0x137d18)
#44 0x00007265508f4462 _ZN19QApplicationPrivate13notify_helperEP7QObjectP6QEvent (libQt6Widgets.so.6 + 0xf4462)
#45 0x00007265508f6a40 _ZN12QApplication6notifyEP7QObjectP6QEvent (libQt6Widgets.so.6 + 0xf6a40)
#46 0x000072654f739818 _ZN16QCoreApplication15notifyInternal2EP7QObjectP6QEvent (libQt6Core.so.6 + 0x139818)
#47 0x0000726543651ee2 n/a (breeze6.so + 0x4aee2)
#48 0x000072654f737d18 _ZN23QCoreApplicationPrivate34sendThroughApplicationEventFiltersEP7QObjectP6QEvent (libQt6Core.so.6 + 0x137d18)
#49 0x00007265508f4462 _ZN19QApplicationPrivate13notify_helperEP7QObjectP6QEvent (libQt6Widgets.so.6 + 0xf4462)
#50 0x00007265508f6a40 _ZN12QApplication6notifyEP7QObjectP6QEvent (libQt6Widgets.so.6 + 0xf6a40)
#51 0x000072654f739818 _ZN16QCoreApplication15notifyInternal2EP7QObjectP6QEvent (libQt6Core.so.6 + 0x139818)
#52 0x0000726543651ee2 n/a (breeze6.so + 0x4aee2)
#53 0x000072654f737d18 _ZN23QCoreApplicationPrivate34sendThroughApplicationEventFiltersEP7QObjectP6QEvent (libQt6Core.so.6 + 0x137d18)
#54 0x00007265508f4462 _ZN19QApplicationPrivate13notify_helperEP7QObjectP6QEvent (libQt6Widgets.so.6 + 0xf4462)
#55 0x00007265508f6a40 _ZN12QApplication6notifyEP7QObjectP6QEvent (libQt6Widgets.so.6 + 0xf6a40)
#56 0x000072654f739818 _ZN16QCoreApplication15notifyInternal2EP7QObjectP6QEvent (libQt6Core.so.6 + 0x139818)
#57 0x0000726543651ee2 n/a (breeze6.so + 0x4aee2)
#58 0x000072654f737d18 _ZN23QCoreApplicationPrivate34sendThroughApplicationEventFiltersEP7QObjectP6QEvent (libQt6Core.so.6 + 0x137d18)
#59 0x00007265508f4462 _ZN19QApplicationPrivate13notify_helperEP7QObjectP6QEvent (libQt6Widgets.so.6 + 0xf4462)
#60 0x00007265508f6a40 _ZN12QApplication6notifyEP7QObjectP6QEvent (libQt6Widgets.so.6 + 0xf6a40)
#61 0x000072654f739818 _ZN16QCoreApplication15notifyInternal2EP7QObjectP6QEvent (libQt6Core.so.6 + 0x139818)
#62 0x0000726543651ee2 n/a (breeze6.so + 0x4aee2)
#63 0x000072654f737d18 _ZN23QCoreApplicationPrivate34sendThroughApplicationEventFiltersEP7QObjectP6QEvent (libQt6Core.so.6 + 0x137d18)

Stack trace of thread 6070:
#0  0x000072654f1190bf __poll (libc.so.6 + 0xfb0bf)
#1  0x000072654a353b18 n/a (libQt6WaylandClient.so.6 + 0x64b18)
#2  0x000072654f8a0bd3 n/a (libQt6Core.so.6 + 0x2a0bd3)
#3  0x000072654f0a955a n/a (libc.so.6 + 0x8b55a)
#4  0x000072654f126a3c n/a (libc.so.6 + 0x108a3c)

Stack trace of thread 6083:
#0  0x000072654f119616 ppoll (libc.so.6 + 0xfb616)
#1  0x000072654f898f6b _Z12qt_safe_pollP6pollfdmPK8timespec (libQt6Core.so.6 + 0x298f6b)
#2  0x000072655075c758 n/a (libQt6Network.so.6 + 0xe7758)
#3  0x00007265507071b9 n/a (libQt6Network.so.6 + 0x921b9)
#4  0x00007265506ff18e _ZN15QAbstractSocket16waitForReadyReadEi (libQt6Network.so.6 + 0x8a18e)
#5  0x000072654eac79da n/a (libKF6KIOCore.so.6 + 0x3c9da)
#6  0x000072654eba7a9d n/a (libKF6KIOCore.so.6 + 0x11ca9d)
#7  0x000072654eb83632 n/a (libKF6KIOCore.so.6 + 0xf8632)
#8  0x000072654f8a0bd3 n/a (libQt6Core.so.6 + 0x2a0bd3)
#9  0x000072654f0a955a n/a (libc.so.6 + 0x8b55a)
#10 0x000072654f126a3c n/a (libc.so.6 + 0x108a3c)

Stack trace of thread 6072:
#0  0x000072654f0a5ebe n/a (libc.so.6 + 0x87ebe)
#1  0x000072654f0a8750 pthread_cond_wait (libc.so.6 + 0x8a750)
#2  0x0000726539c8685c n/a (iris_dri.so + 0x8685c)
#3  0x0000726539c9e82c n/a (iris_dri.so + 0x9e82c)
#4  0x000072654f0a955a n/a (libc.so.6 + 0x8b55a)
#5  0x000072654f126a3c n/a (libc.so.6 + 0x108a3c)

Stack trace of thread 6071:
#0  0x000072654f0a5ebe n/a (libc.so.6 + 0x87ebe)
#1  0x000072654f0a8750 pthread_cond_wait (libc.so.6 + 0x8a750)
#2  0x0000726539c8685c n/a (iris_dri.so + 0x8685c)
#3  0x0000726539c9e82c n/a (iris_dri.so + 0x9e82c)
#4  0x000072654f0a955a n/a (libc.so.6 + 0x8b55a)
#5  0x000072654f126a3c n/a (libc.so.6 + 0x108a3c)

Stack trace of thread 6085:
#0  0x000072654f0a5ebe n/a (libc.so.6 + 0x87ebe)
#1  0x000072654f0a8a65 pthread_cond_timedwait (libc.so.6 + 0x8aa65)
#2  0x000072654f8a3ba4 _ZN14QWaitCondition4waitEP6QMutex14QDeadlineTimer (libQt6Core.so.6 + 0x2a3ba4)
#3  0x000072654f8a64aa n/a (libQt6Core.so.6 + 0x2a64aa)
#4  0x000072654f8a0bd3 n/a (libQt6Core.so.6 + 0x2a0bd3)
#5  0x000072654f0a955a n/a (libc.so.6 + 0x8b55a)
#6  0x000072654f126a3c n/a (libc.so.6 + 0x108a3c)

Stack trace of thread 6069:
#0  0x000072654f0a5ebe n/a (libc.so.6 + 0x87ebe)
#1  0x000072654f0a8750 pthread_cond_wait (libc.so.6 + 0x8a750)
#2  0x000072654f8a3c10 _ZN14QWaitCondition4waitEP6QMutex14QDeadlineTimer (libQt6Core.so.6 + 0x2a3c10)
#3  0x000072654a353a98 n/a (libQt6WaylandClient.so.6 + 0x64a98)
#4  0x000072654f8a0bd3 n/a (libQt6Core.so.6 + 0x2a0bd3)
#5  0x000072654f0a955a n/a (libc.so.6 + 0x8b55a)
#6  0x000072654f126a3c n/a (libc.so.6 + 0x108a3c)

Stack trace of thread 6068:
#0  0x000072654f1190bf __poll (libc.so.6 + 0xfb0bf)
#1  0x000072654db6c2f6 n/a (libglib-2.0.so.0 + 0xb82f6)
#2  0x000072654db0c162 g_main_context_iteration (libglib-2.0.so.0 + 0x58162)
#3  0x000072654f9739c4 _ZN20QEventDispatcherGlib13processEventsE6QFlagsIN10QEventLoop17ProcessEventsFlagEE (libQt6Core.so.6 + 0x3739c4)
#4  0x000072654f743d6e _ZN10QEventLoop4execE6QFlagsINS_17ProcessEventsFlagEE (libQt6Core.so.6 + 0x143d6e)
#5  0x000072654f82106f _ZN7QThread4execEv (libQt6Core.so.6 + 0x22106f)
#6  0x00007265505eb9df n/a (libQt6DBus.so.6 + 0x299df)
#7  0x000072654f8a0bd3 n/a (libQt6Core.so.6 + 0x2a0bd3)
#8  0x000072654f0a955a n/a (libc.so.6 + 0x8b55a)
#9  0x000072654f126a3c n/a (libc.so.6 + 0x108a3c)

Stack trace of thread 6086:
#0  0x000072654f0a5ebe n/a (libc.so.6 + 0x87ebe)
#1  0x000072654f0a8a65 pthread_cond_timedwait (libc.so.6 + 0x8aa65)
#2  0x000072654f8a3ba4 _ZN14QWaitCondition4waitEP6QMutex14QDeadlineTimer (libQt6Core.so.6 + 0x2a3ba4)
#3  0x000072654f8a64aa n/a (libQt6Core.so.6 + 0x2a64aa)
#4  0x000072654f8a0bd3 n/a (libQt6Core.so.6 + 0x2a0bd3)
#5  0x000072654f0a955a n/a (libc.so.6 + 0x8b55a)
#6  0x000072654f126a3c n/a (libc.so.6 + 0x108a3c)

Stack trace of thread 6084:
#0  0x000072654f0a5ebe n/a (libc.so.6 + 0x87ebe)
#1  0x000072654f0a8a65 pthread_cond_timedwait (libc.so.6 + 0x8aa65)
#2  0x000072654f8a3ba4 _ZN14QWaitCondition4waitEP6QMutex14QDeadlineTimer (libQt6Core.so.6 + 0x2a3ba4)
#3  0x000072654f8a64aa n/a (libQt6Core.so.6 + 0x2a64aa)
#4  0x000072654f8a0bd3 n/a (libQt6Core.so.6 + 0x2a0bd3)
#5  0x000072654f0a955a n/a (libc.so.6 + 0x8b55a)
#6  0x000072654f126a3c n/a (libc.so.6 + 0x108a3c)

Stack trace of thread 6087:
#0  0x000072654f0a5ebe n/a (libc.so.6 + 0x87ebe)
#1  0x000072654f0a8a65 pthread_cond_timedwait (libc.so.6 + 0x8aa65)
#2  0x000072654f8a3ba4 _ZN14QWaitCondition4waitEP6QMutex14QDeadlineTimer (libQt6Core.so.6 + 0x2a3ba4)
#3  0x000072654f8a64aa n/a (libQt6Core.so.6 + 0x2a64aa)
#4  0x000072654f8a0bd3 n/a (libQt6Core.so.6 + 0x2a0bd3)
#5  0x000072654f0a955a n/a (libc.so.6 + 0x8b55a)
#6  0x000072654f126a3c n/a (libc.so.6 + 0x108a3c)
ELF object binary architecture: AMD x86-64
Comment 4 Christoph Cullmann 2024-03-14 18:28:46 UTC
Can be reproduced with master with the click on the inactive scrollbar as in the video.
Comment 5 Bug Janitor Service 2024-03-14 22:07:52 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/breeze/-/merge_requests/439
Comment 6 Kai Uwe Broulik 2024-03-14 22:46:27 UTC
Git commit 8af48c52063d04883c055ba3cf0f5a2ddefef41c by Kai Uwe Broulik.
Committed on 14/03/2024 at 22:06.
Pushed by cullmann into branch 'master'.

kstyle: Don't send event to disabled scroll bar

If nobody accepts the event, it can lead to infinite recursion.

M  +1    -1    kstyle/breezestyle.cpp

https://invent.kde.org/plasma/breeze/-/commit/8af48c52063d04883c055ba3cf0f5a2ddefef41c
Comment 7 Kai Uwe Broulik 2024-03-16 12:19:56 UTC
Git commit c949bb4bd288bba5eda06e9a89ea0a054920c719 by Kai Uwe Broulik.
Committed on 16/03/2024 at 11:50.
Pushed by broulik into branch 'Plasma/6.0'.

kstyle: Don't send event to disabled scroll bar

If nobody accepts the event, it can lead to infinite recursion.


(cherry picked from commit 8af48c52063d04883c055ba3cf0f5a2ddefef41c)

M  +1    -1    kstyle/breezestyle.cpp

https://invent.kde.org/plasma/breeze/-/commit/c949bb4bd288bba5eda06e9a89ea0a054920c719
Comment 8 Waqar Ahmed 2024-03-18 11:51:02 UTC
*** Bug 483892 has been marked as a duplicate of this bug. ***