kstyle: Don't send event to disabled scroll bar

If nobody accepts the event, it can lead to infinite recursion.

BUG: 483487